ifds/src/tests/verification/snapshots/ifds__tests__verification___orig_test_ir_assignment_small_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (0) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (2, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (3) at (2, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (4) at (2, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (5) at (2, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (6) at (2, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (2, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (2, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (9) at (2, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (10) at (2, 13) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (11) at (2, 14) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (12) at (2, 15) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (13) at (2, 16) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (14) at (2, 17) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (15) at (2, 18) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (16) at (2, 19) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (17) at (2, 20) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (18) at (2, 21) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (19) at (2, 22) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (20) at (2, 23) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (21) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (22) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (23) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (24) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (25) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (26) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (27) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (28) at (1, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (29) at (1, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (30) at (1, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (31) at (1, 13) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (32) at (1, 14) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (33) at (1, 15) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (34) at (1, 16) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (35) at (1, 17) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (36) at (1, 18) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (37) at (1, 19) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (38) at (1, 20) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (39) at (1, 21) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (40) at (1, 22) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (41) at (1, 23) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (42) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (43) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (44) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (45) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (46) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (47) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (48) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (49) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (50) at (0, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (51) at (0, 12) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (52) at (0, 13) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (53) at (0, 14) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (54) at (0, 15) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (55) at (0, 16) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (56) at (0, 17) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (57) at (0, 18) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (58) at (0, 19) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (59) at (0, 20) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (60) at (0, 21) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (61) at (0, 22) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (62) at (0, 23) { };
\node[font=\tiny] at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] at (-1.5, 1.5) {Block(1)};
\node[font=\tiny] at (-1.5, 2.5) {Block(3)};
\node[font=\tiny] at (-1.5, 3.5) {Block(4)};
\node[font=\tiny] at (-1.5, 4.5) {Assign(1, 0)};
\node[font=\tiny] at (-1.5, 5.5) {BinOp(3, 2, 1)};
\node[font=\tiny] at (-1.5, 6.5) {Conditional(3, [5, 6])};
\node[font=\tiny] at (-1.5, 7.5) {Block(5)};
\node[font=\tiny] at (-1.5, 8.5) {Assign(4, 0)};
\node[font=\tiny] at (-1.5, 9.5) {Const(5, 1.0)};
\node[font=\tiny] at (-1.5, 10.5) {BinOp(6, 5, 4)};
\node[font=\tiny] at (-1.5, 11.5) {Conditional(6, [4])};
\node[font=\tiny] at (-1.5, 12.5) {Kill(6)};
\node[font=\tiny] at (-1.5, 13.5) {Kill(5)};
\node[font=\tiny] at (-1.5, 14.5) {Kill(4)};
\node[font=\tiny] at (-1.5, 15.5) {Jump(6)};
\node[font=\tiny] at (-1.5, 16.5) {Block(6)};
\node[font=\tiny] at (-1.5, 17.5) {Assign(7, 0)};
\node[font=\tiny] at (-1.5, 18.5) {Const(8, -1.0)};
\node[font=\tiny] at (-1.5, 19.5) {Assign(7, 0)};
\node[font=\tiny] at (-1.5, 20.5) {Const(8, -1.0)};
\node[font=\tiny] at (-1.5, 21.5) {Jump(7)};
\node[font=\tiny] at (-1.5, 22.5) {Block(7)};
		\path[->, blue] (43) [bend right] edge  node { } (0);
		\path[->, blue] (43) [bend right] edge  node { } (1);
		\path[->, blue] (43) [bend right] edge  node { } (2);
		\path[->, blue] (43) [bend right] edge  node { } (3);
		\path[->, blue] (43) [bend right] edge  node { } (4);
		\path[->, blue] (43) [bend right] edge  node { } (5);
		\path[->, blue] (43) [bend right] edge  node { } (6);
		\path[->, blue] (43) [bend right] edge  node { } (7);
		\path[->, blue] (43) [bend right] edge  node { } (8);
		\path[->, blue] (43) [bend right] edge  node { } (9);
		\path[->, blue] (43) [bend right] edge  node { } (10);
		\path[->, blue] (43) [bend right] edge  node { } (11);
		\path[->, blue] (43) [bend right] edge  node { } (12);
		\path[->, blue] (43) [bend right] edge  node { } (13);
		\path[->, blue] (43) [bend right] edge  node { } (14);
		\path[->, blue] (43) [bend right] edge  node { } (15);
		\path[->, blue] (43) [bend right] edge  node { } (16);
		\path[->, blue] (43) [bend right] edge  node { } (17);
		\path[->, blue] (43) [bend right] edge  node { } (18);
		\path[->, blue] (43) [bend right] edge  node { } (19);
		\path[->, blue] (43) [bend right] edge  node { } (20);
		\path[->, blue] (43) [bend right] edge  node { } (21);
		\path[->, blue] (43) [bend right] edge  node { } (22);
		\path[->, blue] (43) [bend right] edge  node { } (23);
		\path[->, blue] (43) [bend right] edge  node { } (24);
		\path[->, blue] (43) [bend right] edge  node { } (25);
		\path[->, blue] (43) [bend right] edge  node { } (26);
		\path[->, blue] (43) [bend right] edge  node { } (27);
		\path[->, blue] (43) [bend right] edge  node { } (28);
		\path[->, blue] (43) [bend right] edge  node { } (29);
		\path[->, blue] (43) [bend right] edge  node { } (30);
		\path[->, blue] (43) [bend right] edge  node { } (31);
		\path[->, blue] (43) [bend right] edge  node { } (32);
		\path[->, blue] (43) [bend right] edge  node { } (33);
		\path[->, blue] (43) [bend right] edge  node { } (34);
		\path[->, blue] (43) [bend right] edge  node { } (35);
		\path[->, blue] (43) [bend right] edge  node { } (36);
		\path[->, blue] (43) [bend right] edge  node { } (37);
		\path[->, blue] (43) [bend right] edge  node { } (38);
		\path[->, blue] (43) [bend right] edge  node { } (39);
		\path[->, blue] (43) [bend right] edge  node { } (40);
		\path[->, blue] (43) [bend right] edge  node { } (41);
		\path[->, blue] (43) [bend right] edge  node { } (42);
		\path[->, blue] (43) [loop right] edge  node { } (43);
		\path[->, blue] (43) [bend right] edge  node { } (44);
		\path[->, blue] (43) [bend right] edge  node { } (45);
		\path[->, blue] (43) [bend right] edge  node { } (46);
		\path[->, blue] (43) [bend right] edge  node { } (47);
		\path[->, blue] (43) [bend right] edge  node { } (48);
		\path[->, blue] (43) [bend right] edge  node { } (49);
		\path[->, blue] (43) [bend right] edge  node { } (50);
		\path[->, blue] (43) [bend right] edge  node { } (51);
		\path[->, blue] (43) [bend right] edge  node { } (52);
		\path[->, blue] (43) [bend right] edge  node { } (53);
		\path[->, blue] (43) [bend right] edge  node { } (54);
		\path[->, blue] (43) [bend right] edge  node { } (55);
		\path[->, blue] (43) [bend right] edge  node { } (56);
		\path[->, blue] (43) [bend right] edge  node { } (57);
		\path[->, blue] (43) [bend right] edge  node { } (58);
		\path[->, blue] (43) [bend right] edge  node { } (59);
		\path[->, blue] (43) [bend right] edge  node { } (60);
		\path[->, blue] (43) [bend right] edge  node { } (61);
		\path[->, blue] (43) [bend right] edge  node { } (62);


                \end{tikzpicture}
            \end{document}
