ifds/src/tests/verification/snapshots/ifds__tests__verification___orig_verification_early_return_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (11) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (14) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (15) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (16) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (17) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (0, 4) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[font=\tiny] at (-1.5, 2.5) {Call(mytestfoo, [0], [2])};
\node[font=\tiny] at (-1.5, 3.5) {Call(mytestfoo, [0], [3])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (6, 2) { };
\node[font=\tiny] at (4.5, 0.5) {Const(1, 3.0)};
\node[font=\tiny] at (4.5, 1.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (11, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (10, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (10, 3) { };
\node[font=\tiny] at (8.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] at (8.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] at (8.5, 2.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (5) [loop right] edge  node { } (5);
		\path[->, blue] (5) [bend right] edge  node { } (6);
		\path[->, blue] (5) [bend right] edge  node { } (7);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (2);
		\path[->, blue] (1) [bend right] edge  node { } (3);
		\path[->, blue] (1) [bend right] edge  node { } (4);
		\path[->, blue] (8) [loop right] edge  node { } (8);
		\path[->, blue] (8) [bend right] edge  node { } (9);
		\path[->, blue] (8) [bend right] edge  node { } (10);
		\path[->, blue] (18) [bend right] edge  node { } (11);
		\path[->, blue] (18) [bend right] edge  node { } (12);
		\path[->, blue] (18) [bend right] edge  node { } (13);
		\path[->, blue] (18) [bend right] edge  node { } (14);
		\path[->, blue] (18) [bend right] edge  node { } (15);
		\path[->, blue] (18) [bend right] edge  node { } (16);
		\path[->, blue] (18) [bend right] edge  node { } (17);
		\path[->, blue] (18) [loop right] edge  node { } (18);
		\path[->, blue] (18) [bend right] edge  node { } (19);
		\path[->, blue] (18) [bend right] edge  node { } (20);
		\path[->, blue] (18) [bend right] edge  node { } (21);
		\path[->, blue] (18) [bend right] edge  node { } (22);


                \end{tikzpicture}
            \end{document}
