ifds/src/tests/verification/snapshots/ifds__tests__verification___orig_verification_if_else_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (3, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (3, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (3, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (3, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (3, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (3, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (10) at (3, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (11) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (12) at (2, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (13) at (2, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (14) at (2, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (15) at (2, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%3$}] (16) at (1, 11) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (0, 11) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Conditional(1, [1, 2])};
\node[font=\tiny] at (-1.5, 2.5) {Block(1)};
\node[font=\tiny] at (-1.5, 3.5) {Assign(1, 0)};
\node[font=\tiny] at (-1.5, 4.5) {Const(2, 3.0)};
\node[font=\tiny] at (-1.5, 5.5) {Jump(3)};
\node[font=\tiny] at (-1.5, 6.5) {Block(2)};
\node[font=\tiny] at (-1.5, 7.5) {Const(1, 1.0)};
\node[font=\tiny] at (-1.5, 8.5) {Jump(3)};
\node[font=\tiny] at (-1.5, 9.5) {Block(3)};
\node[font=\tiny] at (-1.5, 10.5) {BinOp(3, 1, 0)};
		\path[->, blue] (17) [bend right] edge  node { } (0);
		\path[->, blue] (17) [bend right] edge  node { } (1);
		\path[->, blue] (17) [bend right] edge  node { } (2);
		\path[->, blue] (17) [bend right] edge  node { } (3);
		\path[->, blue] (17) [bend right] edge  node { } (4);
		\path[->, blue] (17) [bend right] edge  node { } (5);
		\path[->, blue] (17) [bend right] edge  node { } (6);
		\path[->, blue] (17) [bend right] edge  node { } (7);
		\path[->, blue] (17) [bend right] edge  node { } (8);
		\path[->, blue] (17) [bend right] edge  node { } (9);
		\path[->, blue] (17) [bend right] edge  node { } (10);
		\path[->, blue] (17) [bend right] edge  node { } (11);
		\path[->, blue] (17) [bend right] edge  node { } (12);
		\path[->, blue] (17) [bend right] edge  node { } (13);
		\path[->, blue] (17) [bend right] edge  node { } (14);
		\path[->, blue] (17) [bend right] edge  node { } (15);
		\path[->, blue] (17) [bend right] edge  node { } (16);
		\path[->, blue] (17) [loop right] edge  node { } (17);
		\path[->, blue] (17) [bend right] edge  node { } (18);
		\path[->, blue] (17) [bend right] edge  node { } (19);
		\path[->, blue] (17) [bend right] edge  node { } (20);
		\path[->, blue] (17) [bend right] edge  node { } (21);
		\path[->, blue] (17) [bend right] edge  node { } (22);
		\path[->, blue] (17) [bend right] edge  node { } (23);
		\path[->, blue] (17) [bend right] edge  node { } (24);
		\path[->, blue] (17) [bend right] edge  node { } (25);
		\path[->, blue] (17) [bend right] edge  node { } (26);
		\path[->, blue] (17) [bend right] edge  node { } (27);
		\path[->, blue] (17) [bend right] edge  node { } (28);


                \end{tikzpicture}
            \end{document}
