ifds/src/tests/verification/snapshots/ifds__tests__verification___sparse_global_get_and_set_multiple_functions_dot.snap
---
source: src/tests/verification/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (0, 3) { };
\node[font=\tiny] (note_8) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_9) at (-1.5, 1.5) {Const(-2, 1.0)};
\node[font=\tiny] (note_10) at (-1.5, 2.5) {Return([0])};
\node[font=\tiny] (note_11) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_12) at (-1.5, 1.5) {Const(-2, 1.0)};
\node[font=\tiny] (note_13) at (-1.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (15) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (17) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (31) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (32) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (34) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (35) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (36) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (37) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (38) at (6, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (39) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (40) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (41) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (42) at (6, 3) { };
\node[font=\tiny] (note_5) at (3.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] (note_6) at (3.5, 1.5) {Const(-1, 1.0)};
\node[font=\tiny] (note_7) at (3.5, 2.5) {Return([0])};
\node[font=\tiny] (note_14) at (3.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] (note_15) at (3.5, 1.5) {Const(-1, 1.0)};
\node[font=\tiny] (note_16) at (3.5, 2.5) {Return([0])};
\node[font=\tiny] (note_17) at (3.5, 0.5) {Assign(0, -2)};
\node[font=\tiny] (note_18) at (3.5, 1.5) {Const(-1, 1.0)};
\node[font=\tiny] (note_19) at (3.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (10, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (10, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (14) at (11, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (27) at (11, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (28) at (13, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (29) at (13, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (33) at (10, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (43) at (12, 4) { };
\node[font=\tiny] (note_0) at (8.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] (note_1) at (8.5, 1.5) {Assign(-2, 1)};
\node[font=\tiny] (note_2) at (8.5, 2.5) {Const(2, 1.0)};
\node[font=\tiny] (note_3) at (8.5, 3.5) {Call(1, [2], [0])};
\node[font=\tiny] (note_4) at (8.5, 4.5) {Call(2, [], [1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (2) [bend right] edge  node { } (19);
		\path[->, blue] (2) [bend right] edge  node { } (20);
		\path[->, blue] (2) [bend right] edge  node { } (21);
		\path[->, blue] (3) [bend right] edge  node { } (11);
		\path[->, blue] (4) [loop right] edge  node { } (4);
		\path[->, blue] (4) [bend right] edge  node { } (24);
		\path[->, blue] (4) [bend right] edge  node { } (25);
		\path[->, blue] (3) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (27);
		\path[->, blue] (0) [bend right] edge  node { } (28);
		\path[->, blue] (0) [bend right] edge  node { } (29);
		\path[->, blue] (1) [bend right] edge  node { } (19);
		\path[->, blue] (1) [bend right] edge  node { } (20);
		\path[->, blue] (1) [bend right] edge  node { } (21);
		\path[->, blue] (3) [bend right] edge  node { } (13);
		\path[->, blue] (15) [loop right] edge  node { } (15);
		\path[->, blue] (2) [bend right] edge  node { } (35);
		\path[->, blue] (2) [bend right] edge  node { } (36);
		\path[->, blue] (2) [bend right] edge  node { } (37);
		\path[->, blue] (2) [bend right] edge  node { } (38);
		\path[->, blue] (15) [bend right] edge  node { } (35);
		\path[->, blue] (15) [bend right] edge  node { } (36);
		\path[->, blue] (15) [bend right] edge  node { } (37);
		\path[->, blue] (15) [bend right] edge  node { } (38);
		\path[->, blue] (0) [bend right] edge  node { } (43);


                \end{tikzpicture}
            \end{document}
